First tests are passed.