@@ -93,7 +93,16 @@
       <artifactId>gremlin-server</artifactId>
       <version>3.7.4-YTDB-SNAPSHOT</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.tinkerpop</groupId>
+      <artifactId>gremlin-driver</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>fluent-hc</artifactId>
@@ -121,6 +130,7 @@
           -Dyoutrackdb.file.log.deletion=false
           --add-opens jdk.unsupported/sun.misc=ALL-UNNAMED
           --add-opens java.base/sun.security.x509=ALL-UNNAMED
+          --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
         </argLine>
       </properties>
     </profile>
@@ -218,6 +228,7 @@
         <configuration>
           <systemPropertyVariables>
             <buildDirectory>${project.build.directory}</buildDirectory>
+            <build.dir>${project.build.directory}</build.dir>
           </systemPropertyVariables>
           <excludes>
             <exclude>${exclude.test.1}</exclude>
